Added testing methods

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,8 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/login_btn_margin_left"
-                android:layout_marginRight="@dimen/login_btn_margin_right"
+                android:layout_marginLeft="65dp"
+                android:layout_marginRight="65dp"
                 android:backgroundTint="@color/background_main"
                 android:text="@string/btnLogin2"
                 android:textColor="@color/background_text"
