--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/registerLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,7 +39,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="356dp"
-        android:layout_height="400dp"
+        android:layout_height="340dp"
         app:cardBackgroundColor="#c6934f"
         app:cardCornerRadius="18dp"
         app:cardElevation="8dp"
@@ -58,23 +59,6 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="20dp"
                 app:srcCompat="@drawable/icon_user" />
-
-            <EditText
-                android:id="@+id/edtNameRegister"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/textBox"
-                android:drawableRight="@drawable/icon_edit"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="@string/edtName2"
-                android:textAlignment="center"
-                android:textColor="@color/background_main"
-                android:textSize="20sp"
-                android:textStyle="normal" />
 
             <EditText
                 android:id="@+id/edtEmailRegister"
@@ -133,7 +117,29 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView33"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="485dp"
+            android:text="Already Have an Account ?"
+            android:textAlignment="center"
+            android:textColor="@color/background_main"
+            android:textSize="18sp" />
 
+        <Button
+            android:id="@+id/btnLognReg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="128dp"
+            android:layout_marginRight="128dp"
+            android:layout_marginTop="6dp"
+            android:backgroundTint="@color/background_main"
+            android:text="Login"
+            android:textColor="@color/background_text"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:cornerRadius="18dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
