Credit Monitoring - files renamed

--- a/app/src/main/res/layout/credit_main.xml
+++ b/app/src/main/res/layout/credit_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/background_text"
     android:orientation="vertical"
     app:layout_insetEdge="none"
-    tools:context=".MainActivity">
+    tools:context=".credit_main">
 
     <TextView
         android:id="@+id/tvCreditTracker"
