--- a/app/src/main/res/layout/budget_main.xml
+++ b/app/src/main/res/layout/budget_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/background_main"
     android:backgroundTint="@color/background_text"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".BudgetMain">
 
     <TextView
         android:id="@+id/textView"
