--- a/app/src/main/res/layout/activity_financial_tips_page.xml
+++ b/app/src/main/res/layout/activity_financial_tips_page.xml
@@ -56,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginStart="5dp"
                 android:autoLink="web"
                 android:linksClickable="true"
                 android:text="@string/tvWeb0"
@@ -70,6 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginStart="5dp"
                 android:autoLink="web"
                 android:linksClickable="true"
                 android:text="@string/tvWeb2"
@@ -84,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginStart="5dp"
                 android:autoLink="web"
                 android:linksClickable="true"
                 android:text="@string/tvWeb1"
@@ -98,6 +101,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="24dp"
+                android:layout_marginStart="5dp"
                 android:autoLink="web"
                 android:linksClickable="true"
                 android:text="@string/tvWeb03"
@@ -129,6 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginStart="5dp"
             android:autoLink="web"
             android:linksClickable="true"
             android:text="@string/tvWeb04"
@@ -143,6 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginStart="5dp"
             android:autoLink="web"
             android:linksClickable="true"
             android:text="@string/tvWeb6"
