--- a/app/src/main/res/layout/activity_goals_add_page.xml
+++ b/app/src/main/res/layout/activity_goals_add_page.xml
@@ -75,15 +75,14 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="#000000"
+        android:autofillHints=""
         android:ems="10"
+        android:hint="@string/AddAmount"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textColor="@color/background_main"
         android:textSize="22sp"
-        android:textStyle="italic"
-        android:autofillHints="@string/AddAmount"
-        android:hint="@string/AddAmount"/>
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/textView8"
@@ -134,16 +133,16 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="@string/AddDate"
         android:inputType="date"
         android:textAlignment="center"
         android:textColor="@color/background_main"
-        android:textColorHighlight="@color/background_main"
-        android:textColorHint="@color/background_main"
+        android:textColorHighlight="@color/gray"
+        android:textColorHint="@color/gray"
         android:textSize="22sp"
-        android:textStyle="italic"
-        android:autofillHints="" />
+        android:textStyle="italic" />
 
     <Button
         android:id="@+id/button10"
