--- a/app/src/main/res/layout/goal_view.xml
+++ b/app/src/main/res/layout/goal_view.xml
@@ -1,53 +1,38 @@
-<!--item_view -->
-
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:orientation="horizontal"
-    android:baselineAligned="false"
     android:background="@color/white"
     android:layout_marginBottom="10dp">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/title_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/goal_Title"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />
-
-        <!-- <TextView
-             android:id="@+id/description_textview"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:text="Save Money 1000 "
-             android:textSize="16sp"
-             android:textColor="@android:color/darker_gray"/>
- -->
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/title_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="@string/goal_Title"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
 
-        <ImageButton
-            android:id="@+id/delete_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/btnColor"
-            android:src="@drawable/delete_icon"
-            android:contentDescription="@string/delete_button"
-            android:layout_marginEnd="5dp"/>
+    <CheckBox
+        android:id="@+id/completed_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="56dp"
+        android:layout_toStartOf="@id/delete_button" />
 
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/btnColor"
+        android:src="@drawable/delete_icon"
+        android:contentDescription="@string/delete_button"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp" />
 
-</LinearLayout>
+</RelativeLayout>
